// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TalentsTier default 1`] = `
.c4 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: default;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgb(234,242,246);
  background-color: rgb(0,130,155);
  border-color: rgb(0,130,155);
}

.c4 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c5 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: default;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgba(30,30,28,0.4);
  border-color: rgba(30,30,28,0.4);
}

.c5 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c3 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c3 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 h4,
.c3 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c3 p,
.c3 textarea {
  text-align: justify;
}

.c3 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c3 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c3 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c3 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c3 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c3 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c3 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c3 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c3 input,
.c3 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c3 input::-webkit-input-placeholder,
.c3 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input::-moz-placeholder,
.c3 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input:-ms-input-placeholder,
.c3 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input::placeholder,
.c3 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input:disabled,
.c3 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 textarea {
  width: 100%;
  height: 5em;
}

.c0 {
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c2 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c2 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c3 p,
  .c3 label[for="notes"],
  .c3 label[for="description"] {
    grid-column: 1/4;
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c2 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="talents-tier-1"
>
  <div
    class="c1"
  >
    <h3>
      Tier 
      1
    </h3>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="talent-combat_medicine"
    >
      <h4
        data-testid="talent-combat_medicine-name"
      >
        Combat Medicine
      </h4>
      <h4
        data-testid="talent-combat_medicine-activation"
      >
        Active (Incidental)
      </h4>
      <label
        class="c4"
        data-testid="talent-combat_medicine-ranked"
        disabled=""
        name="talents.combat_medicine.ranked"
      >
        <input
          disabled=""
          name="talents.combat_medicine.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-combat_medicine-description"
      >
        Before making a Medicine check, your character may use this talent to add 
        <span
          type="success"
        >
          s
        </span>
         equal to their ranks in Combat Medicine to the results. After the check is resolved, the target suffers 2 strain for each rank your character has in Combat Medicine.
      </p>
    </div>
    <div
      class="c3"
      data-testid="talent-custom_code"
    >
      <h4
        data-testid="talent-custom_code-name"
      >
        Custom Code
      </h4>
      <h4
        data-testid="talent-custom_code-activation"
      >
        Passive
      </h4>
      <label
        class="c5"
        data-testid="talent-custom_code-ranked"
        disabled=""
        name="talents.custom_code.ranked"
      >
        <input
          disabled=""
          name="talents.custom_code.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-custom_code-description"
      >
        When your character selects this talent they choose one icebreaker or piece of ice that they own. If they choose an icebreaker, whenever they use that icebreaker to override ice, they add 
        <span
          type="advantage"
        >
          a
        </span>
         to the results. If they choose a piece of ice, whenever someone else attempts to override it, they add 
        <span
          type="threat"
        >
          h
        </span>
         to the results.
      </p>
    </div>
    <div
      class="c3"
      data-testid="talent-dedication"
    >
      <h4
        data-testid="talent-dedication-name"
      >
        Dedication
      </h4>
      <h4
        data-testid="talent-dedication-activation"
      >
        Passive
      </h4>
      <label
        class="c4"
        data-testid="talent-dedication-ranked"
        disabled=""
        name="talents.dedication.ranked"
      >
        <input
          disabled=""
          name="talents.dedication.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-dedication-description"
      >
        Each rank of Dedication increases one of your character's characteristics by one. This talent cannot increase a characteristic above 5. You cannot increase the same characteristic with Dedication twice.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TalentsTier editing 1`] = `
.c3 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c3 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 h4,
.c3 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c3 p,
.c3 textarea {
  text-align: justify;
}

.c3 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c3 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c3 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c3 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c3 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c3 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c3 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c3 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c3 input,
.c3 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c3 input::-webkit-input-placeholder,
.c3 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input::-moz-placeholder,
.c3 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input:-ms-input-placeholder,
.c3 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input::placeholder,
.c3 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c3 input:disabled,
.c3 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 textarea {
  width: 100%;
  height: 5em;
}

.c4 {
  background: transparent;
  border: none;
  color: rgb(242,143,34);
  font-size: 15px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin: 0 6px;
}

.c4:disabled {
  color: rgb(255,244,233);
  cursor: not-allowed;
}

.c0 {
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c2 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c2 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c3 p,
  .c3 label[for="notes"],
  .c3 label[for="description"] {
    grid-column: 1/4;
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c2 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="talents-tier-1"
>
  <div
    class="c1"
  >
    <h3>
      Tier 
      1
    </h3>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="talent-1"
    >
      <h4
        data-testid="talent-1-name"
      >
        Combat Medicine
      </h4>
      <h4
        data-testid="talent-1-activation"
      >
        Active (Incidental)
      </h4>
      <h4
        data-testid="talent-1-rank"
      >
        Rank:
         
        <button
          class="c4"
          data-testid="decrease-1-rank"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13H5v-2h14v2z"
            />
          </svg>
        </button>
        2
        <button
          class="c4"
          data-testid="increase-1-rank"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </h4>
      <p
        data-testid="talent-1-description"
      >
        Before making a Medicine check, your character may use this talent to add 
        <span
          type="success"
        >
          s
        </span>
         equal to their ranks in Combat Medicine to the results. After the check is resolved, the target suffers 2 strain for each rank your character has in Combat Medicine.
      </p>
      <label
        for="notes"
      >
        <textarea
          data-testid="talent-1-notes"
          id="notes"
          name="notes"
          placeholder="Add notes"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TalentsTier showAdd character talent 1`] = `
.c2 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c2:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c4 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c4 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 h4,
.c4 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c4 p,
.c4 textarea {
  text-align: justify;
}

.c4 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c4 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c4 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c4 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c4 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c4 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c4 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c4 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c4 input,
.c4 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c4 input::-webkit-input-placeholder,
.c4 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input::-moz-placeholder,
.c4 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input:-ms-input-placeholder,
.c4 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input::placeholder,
.c4 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input:disabled,
.c4 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c4 textarea {
  width: 100%;
  height: 5em;
}

.c0 {
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c3 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c3 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c4 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c4 p,
  .c4 label[for="notes"],
  .c4 label[for="description"] {
    grid-column: 1/4;
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="talents-tier-1"
>
  <div
    class="c1"
  >
    <h3>
      Tier 
      1
    </h3>
    <div
      data-testid="form-buttons-tier-1-talents"
    >
      <button
        class="c2"
        data-testid="edit-tier-1-talents"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      data-testid="talent-combat_medicine"
    >
      <h4
        data-testid="talent-combat_medicine-name"
      >
        Combat Medicine
      </h4>
      <h4
        data-testid="talent-combat_medicine-activation"
      >
        Active (Incidental)
      </h4>
      <h4
        data-testid="talent-combat_medicine-rank"
      >
        Rank:
         
      </h4>
      <p
        data-testid="talent-combat_medicine-description"
      >
        Before making a Medicine check, your character may use this talent to add 
        <span
          type="success"
        >
          s
        </span>
         equal to their ranks in Combat Medicine to the results. After the check is resolved, the target suffers 2 strain for each rank your character has in Combat Medicine.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/TalentsTier showAdd new talent 1`] = `
.c5 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: default;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgb(234,242,246);
  background-color: rgb(0,130,155);
  border-color: rgb(0,130,155);
}

.c5 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c6 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  position: relative;
  cursor: default;
  font-size: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid;
  padding: 4px;
  padding-top: 6px;
  border-radius: 3px;
  font-weight: 700;
  text-transform: uppercase;
  color: rgba(30,30,28,0.4);
  border-color: rgba(30,30,28,0.4);
}

.c6 > input {
  position: absolute !important;
  opacity: 0 !important;
  height: 0 !important;
  width: 0 !important;
}

.c2 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c2:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c4 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 12px;
  padding: 12px;
}

.c4 > div {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 h4,
.c4 p {
  margin: 0;
  color: rgb(0,130,155);
}

.c4 p,
.c4 textarea {
  text-align: justify;
}

.c4 h4 {
  text-shadow: 1px 1px rgb(234,242,246);
}

.c4 h4:nth-child(2) {
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c4 h4:nth-child(3) {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 p > span {
  font-family: "GenesysSymbols",Times New Roman,serif;
  color: rgb(0,0,0);
}

.c4 p > span[type=boost] {
  color: rgb(167,218,243);
}

.c4 p > span[type=ability] {
  color: rgb(78,171,83);
}

.c4 p > span[type=proficiency] {
  color: rgb(255,240,61);
}

.c4 p > span[type=difficulty] {
  color: rgb(81,42,124);
}

.c4 p > span[type=challenge] {
  color: rgb(116,24,26);
}

.c4 input,
.c4 textarea {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c4 input::-webkit-input-placeholder,
.c4 textarea::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input::-moz-placeholder,
.c4 textarea::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input:-ms-input-placeholder,
.c4 textarea:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input::placeholder,
.c4 textarea::placeholder {
  color: rgba(0,130,155,0.7);
}

.c4 input:disabled,
.c4 textarea:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c4 textarea {
  width: 100%;
  height: 5em;
}

.c0 {
  padding: 12px;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 12px;
}

.c1 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 div > button {
  font-size: 25px;
  padding: 6px;
}

.c3 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c3 > form:not(:last-child) {
  margin-bottom: 12px;
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c4 {
    grid-template-columns: 4fr 3fr 2fr;
  }

  .c4 p,
  .c4 label[for="notes"],
  .c4 label[for="description"] {
    grid-column: 1/4;
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c3 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="talents-tier-1"
>
  <div
    class="c1"
  >
    <h3>
      Tier 
      1
    </h3>
    <div
      data-testid="form-buttons-tier-1-talents"
    >
      <button
        class="c2"
        data-testid="edit-tier-1-talents"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      data-testid="talent-combat_medicine"
    >
      <h4
        data-testid="talent-combat_medicine-name"
      >
        Combat Medicine
      </h4>
      <h4
        data-testid="talent-combat_medicine-activation"
      >
        Active (Incidental)
      </h4>
      <label
        class="c5"
        data-testid="talent-combat_medicine-ranked"
        disabled=""
        name="talents.combat_medicine.ranked"
      >
        <input
          disabled=""
          name="talents.combat_medicine.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-combat_medicine-description"
      >
        Before making a Medicine check, your character may use this talent to add 
        <span
          type="success"
        >
          s
        </span>
         equal to their ranks in Combat Medicine to the results. After the check is resolved, the target suffers 2 strain for each rank your character has in Combat Medicine.
      </p>
    </div>
    <div
      class="c4"
      data-testid="talent-custom_code"
    >
      <h4
        data-testid="talent-custom_code-name"
      >
        Custom Code
      </h4>
      <h4
        data-testid="talent-custom_code-activation"
      >
        Passive
      </h4>
      <label
        class="c6"
        data-testid="talent-custom_code-ranked"
        disabled=""
        name="talents.custom_code.ranked"
      >
        <input
          disabled=""
          name="talents.custom_code.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-custom_code-description"
      >
        When your character selects this talent they choose one icebreaker or piece of ice that they own. If they choose an icebreaker, whenever they use that icebreaker to override ice, they add 
        <span
          type="advantage"
        >
          a
        </span>
         to the results. If they choose a piece of ice, whenever someone else attempts to override it, they add 
        <span
          type="threat"
        >
          h
        </span>
         to the results.
      </p>
    </div>
    <div
      class="c4"
      data-testid="talent-dedication"
    >
      <h4
        data-testid="talent-dedication-name"
      >
        Dedication
      </h4>
      <h4
        data-testid="talent-dedication-activation"
      >
        Passive
      </h4>
      <label
        class="c5"
        data-testid="talent-dedication-ranked"
        disabled=""
        name="talents.dedication.ranked"
      >
        <input
          disabled=""
          name="talents.dedication.ranked"
          type="checkbox"
        />
        <span>
          ranked
        </span>
      </label>
      <p
        data-testid="talent-dedication-description"
      >
        Each rank of Dedication increases one of your character's characteristics by one. This talent cannot increase a characteristic above 5. You cannot increase the same characteristic with Dedication twice.
      </p>
    </div>
  </div>
</div>
`;
